--- a/src/app/business/login/views/sing-in/sing-in.component.html
+++ b/src/app/business/login/views/sing-in/sing-in.component.html
@@ -1,3 +1,29 @@
-<p>
-  sing-in works!
-</p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="card">
+        <div class="card-header">
+          SIGN IN
+        </div>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label>Email address</label>
+              <input type="email" class="form-control" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label >Password</label>
+              <input type="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>              
+          </form>
+        </div>
+        <div class="card-footer text-muted">
+          Todos los derechos reservados
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
